kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-anything
spec:
  type: ClusterIP
  selector:
    app: html-anything
  ports:
    - port: 80
      targetPort: 3000
      name: http
